# PracticeVisualPositioning

./: CMakeLists.txt
CeresSolverTools/: BundleAdjustFunction.h  InvDepthReProjectionError.h  MarginalizationFactor.h  ProjectionFactorCam.h  SimpleInvDepthReProjectionError.h  SimpleKPPriorError.h  SimpleReprojectionError.h  SimpleStereoInvDepthReprojectionErro.h  SimpleStereoInvDepthReprojectionError.h  marginalization_factor.cpp  marginalization_factor.h
PythoTools/: VOSimulatorGenerator.py  draw_trace.py  kittiListGenerator.py
StereoVO/: MarginalizationInfo.h  MarginalizationServer.cpp  MarginalizationServer.h  MarginalizationServer.puml  Optimizer.cpp  Optimizer.h  StereoConfigServer.cpp  StereoConfigServer.h  StereoFeatureManager.cpp  StereoFeatureManager.h  StereoFeatureTracker.cpp  StereoFeatureTracker.h  StereoOdometryServer.cpp  StereoOdometryServer.h
VOSimulator/: CameraProject.h
VisualOdometry/: Feature.cpp  Feature.h  FeatureManager.cpp  FeatureManager.h  FeatureTrackServer.cpp  FeatureTrackServer.h  Frame.h  FrontEndOptimizer.cpp  FrontEndOptimizer.h  SFMFeatureManager.cpp  SFMFeatureManager.h
VisualizeTools/: SLAMVisualServer.h
tester/: HugeOptimizerTester.cpp  SimDataTester.cpp  SimpleVOSImulation.cpp  StereoKittiTester.cpp  feature_track_server_kitti_tester.cpp  feature_tracker_server_tester.cpp  mono_slam_tester.cpp  slam_visual_server_tes.cpp  wtrajectory_test.cpp
tester/invalid/: HugeOptimizerTester.cpp
util/: ConfigerServer.h  GeoTools.h  tic_toc.h
